src/testing/private_tests/negative_tests/bad_rucursion_inf.eds
int infr(int i) {
    return i + infr(i-1);
}

void main() {
    int i;
    i = infr(100);
}
